--- a/css/main.css
+++ b/css/main.css
@@ -790,8 +790,8 @@ button:focus {
 }
 
 #clients .client-item-wrapper img {
-  width: 70%;
-  opacity: 0.5;
+  /*width: 70%;*/
+  /*opacity: 0.5;*/
 }
 
 #clients #clients-scroller img:hover {
